@@ -1,4 +1,4 @@
-package UI.referenceCode2;
+package UI.Login;
 
 import UI.Table.Table;
 import javafx.application.Application;
@@ -8,16 +8,19 @@ import javafx.scene.Scene;
 import javafx.stage.Stage;
 import javafx.stage.StageStyle;
 
-// vm op
-// --module-path /home/praveen/IdeaProjects/openjfx-11.0.2_linux-x64_bin-sdk/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
+import java.io.IOException;
 
+public class Login extends Application {
 
-public class Main extends Application {
+    public static void main(String[] args) {
+        launch(args);
+    }
 
     @Override
-    public void start(Stage primaryStage) throws Exception{
+    public void start(Stage primaryStage) throws IOException {
+
         Table.primaryStage = primaryStage   ;
-        Parent root = FXMLLoader.load(getClass().getClassLoader().getResource("Table/Table.fxml"));
+        Parent root = FXMLLoader.load(getClass().getClassLoader().getResource("Login/Login.fxml")); //"Table/Table.fxml"));
         Table.primaryStage.setTitle("Hello World");
         Table.primaryStage.initStyle(StageStyle.TRANSPARENT);
         final Scene scene = new Scene(root);
@@ -26,10 +29,5 @@ public class Main extends Application {
         Table.primaryStage.setScene(scene);
 
         Table.primaryStage.show();
-    }
-
-
-    public static void main(String[] args) {
-        launch(args);
     }
 }
